--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,5 +47,8 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y valgrind=1:3.22.*
 
-      - name: Run tests
+      - name: Run tests with max optimization
         run: cargo test --release
+
+      - name: Run tests with basic optimization
+        run: fix clean && FIX_MAX_OPT_LEVEL=basic cargo test --release
