--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-14]
+        os: [ubuntu-latest, macos-latest]
+        opt-level: [max, basic]
+    env:
+      FIX_MAX_OPT_LEVEL: ${{ matrix.opt-level }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -26,7 +29,7 @@ jobs:
             tar -xf llvm.tar.xz -C llvm --strip-components=1
             LLVM_PATH="${GITHUB_WORKSPACE}/llvm"
             echo "LLVM_SYS_170_PREFIX=$LLVM_PATH" >> $GITHUB_ENV
-          elif [[ "${{ matrix.os }}" == "macos-14" ]]; then
+          elif [[ "${{ matrix.os }}" == "macos-latest" ]]; then
             brew install llvm@17
             echo "LLVM_SYS_170_PREFIX=$(brew --prefix llvm@17)" >> $GITHUB_ENV
             brew install openssl
@@ -47,8 +50,5 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y valgrind=1:3.22.*
 
-      - name: Run tests with max optimization
+      - name: Run tests
         run: cargo test --release
-
-      - name: Run tests with basic optimization
-        run: fix clean && FIX_MAX_OPT_LEVEL=basic cargo test --release
