--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
-        opt-level: [max, basic]
+        opt-level: [max, basic, none]
     env:
       FIX_MAX_OPT_LEVEL: ${{ matrix.opt-level }}
     steps:
