change gitignore so that test.fix is not ignored

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,6 @@ after_opt.ll
 benchmark/data_copied.csv
 cachegrind.out.*
 *.symbols.fix
-test.fix
-test.log
-llvm_passes_tmp.txt
+/test.log
+/llvm_passes_tmp.txt
 passes_optimizer.log
