improve test_dependencies

--- a/src/tests/test_dependencies/cases/dependencies_for_test/normal_dep/fixproj.toml
+++ b/src/tests/test_dependencies/cases/dependencies_for_test/normal_dep/fixproj.toml
@@ -8,3 +8,10 @@ license = "MIT"
 
 [build]
 files = ["lib.fix"]
+
+[build.test]
+files = ["test.fix"]
+
+[[test_dependencies]]
+name = "test-dep"
+path = "../test_dep"
