--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,7 +49,7 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libmpfr6
+          sudo apt-get install -y libgmp-dev libmpfr-dev
 
       - name: Install valgrind (Ubuntu only)
         if: matrix.os == 'ubuntu-latest'
